dark mode bug fix

--- a/style.scss
+++ b/style.scss
@@ -503,9 +503,9 @@ dd {
       border-right: 0;
     }
   }
-}
 
-@media (prefers-color-scheme: dark){
+
+.dark-mode{
   .wrapper-sidebar {
     width: 30%;
     -webkit-background-size: cover;
@@ -679,7 +679,7 @@ nav {
           }
         }
       }
-      @media (prefers-color-scheme: dark){
+      .dark-mode{
         > a {
           margin: 3px 3px 3px 0;
           padding: .5px 4px;
@@ -695,7 +695,7 @@ nav {
       }
     }
   }
-}
+
 
 
 
